--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@babel/traverse": "^7.23.2",
     "angular-cli-ghpages": "^1.0.5",
     "array-shuffle": "^3.0.0",
     "postcss": "^8.4.31",
