--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "@babel/traverse": "^7.23.2",
     "angular-cli-ghpages": "^1.0.5",
     "array-shuffle": "^3.0.0",
+    "express": "^4.19.2",
+    "follow-redirects": "^1.15.6",
     "postcss": "^8.4.31",
     "rxjs": "~7.8.0",
     "semver": "^7.5.4",
     "socket.io-parser": "^4.2.4",
     "tslib": "^2.3.0",
+    "webpack-dev-middleware": "^6.1.2",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
